Fix double scrollbars

--- a/daladevelop/assets/scss/_libraries/sanitize.scss
+++ b/daladevelop/assets/scss/_libraries/sanitize.scss
@@ -29,7 +29,7 @@ $textarea-resize: vertical !default;
 
 :root {
 	-ms-overflow-style: -ms-autohiding-scrollbar; // IE11+
-	overflow-y: scroll; // All browsers without overlaying scrollbars
+	overflow: hidden; // All browsers without overlaying scrollbars
 	text-size-adjust: 100%; // iOS 8+
 }
 
